test/domains/sungeun/sparse/index_not_in_domain_1.good
{1152921504606846975 2305843009213693951 4611686018427387903 9223372036854775807}
{576460752303423487 1152921504606846975 2305843009213693951 4611686018427387903 9223372036854775807}
index_not_in_domain_1.chpl:20: error: halt reached - index not in domain: 0
